example/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: escape-nation
spec:
  selector:
    app: api
  ports:
  - name: http
    port: 80
    targetPort: 4000
  type: ClusterIP
